# Stereo_Capture

./: CMakeLists.txt  CMakeLists.txt~  usage.txt  usage.txt~
include/: ImageDisplay.h  flycap.h
src/: CMakeLists.txt  CMakeLists.txt~  Capture.cpp  Capture.cpp~  ImageDisplay_OpenCV.cpp  flycap.cpp
